--- a/UI-Interface/assets/css/styles.css
+++ b/UI-Interface/assets/css/styles.css
@@ -1,8 +1,73 @@
 *{
     margin:0; padding: 0;
     box-sizing: border-box;
+    font-family: calibri;
 }
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: #ccc;
+  }
+  ::-moz-placeholder { /* Firefox 19+ */
+    color: #ccc;
+  }
+  :-ms-input-placeholder { /* IE 10+ */
+    color: #ccc;
+  }
+  :-moz-placeholder { /* Firefox 18- */
+    color: #ccc;
+  }
 
 html,body{
     background: #eee;
+}
+
+.bg-fullscreen{
+    position: absolute;
+    height: 100%; width: 100%;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background: url('../images/bg_with_logo.jpg');
+    background-size: cover;
+    background-position: 50% 50%;
+}
+
+.login-form{
+    position: absolute;
+    right: 15%;
+    top: 40%;
+}
+
+.login-form input {
+    display: block;
+    font-size: 18px;
+    padding: 20px 10px;
+    margin: 0; 
+    float: none;
+    width: 400px;
+    outline: none;
+    border: none;
+}
+
+.login-form input[type="text"],.login-form input[type="password"]{
+    background: #fff;
+    color: rgb(36, 32, 32);
+    border: 2px solid #fff;
+}
+
+.login-form input[type="button"]{
+    cursor: pointer;
+    background: #3a1c14;
+    color: #fff;
+    padding: 15px;
+}
+
+.login-form .helper{
+    color: #555;
+    font-size: 15px;
+    text-align: right;
+    cursor: pointer;
+    margin: 10px 0;
+}
+
+.login-form .helper:hover{
+    text-decoration: underline;
 }
